--- a/companies-asia/air-india.html
+++ b/companies-asia/air-india.html
@@ -3,18 +3,18 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>Companies in Asia</title>
+		<title>Air India</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
 		<div class="min-h-screen bg-[#0b0f2a] bg-[radial-gradient(circle_at_top_right,_rgba(0,159,183,0.3)_0%,_transparent_60%),_radial-gradient(circle_at_bottom_left,_rgba(0,159,183,0.3)_0%,_transparent_60%)]">
-		<div id="hero" class="w-full relative">
+		<div id="hero" class="w-full h-[80dvh] relative">
             <nav class="">
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
                         <div class="flex items-center space-x-4">
-                            <img src="../assets/logo.svg" class="w-14 h-14 text-black">
+                            <img src="../../assets/logo.svg" class="w-14 h-14 text-black">
                             <h4 class="text-2xl">ThreatScope</h4>
                         </div>
                     </div>
@@ -285,68 +285,77 @@
                 </div>
             </nav>
 
-			<div class="mt-10 max-w-7xl mx-auto">
-                <div class="flex items-center text-gray-300 space-x-2">
-                    <a class="text-sm" href="#">Companies Affected</a>
-                    <span class="text-gray-300 text-sm">/</span>
-                    <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
-                    <span class="text-gray-300 text-sm">/</span>
-                    <a href="#" class="text-sm">Asia</a>
+			<div class="mt-24 max-w-5xl mx-auto">
+                <div class="space-y-4">
+                    <div class="flex items-center text-gray-300 space-x-2">
+                        <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
+                        <span class="text-gray-300 text-sm">/</span>
+                        <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <span class="text-gray-300 text-sm">/</span>
+                        <a href="../continents/asia.html" class="text-sm">Asia</a>
+                        <span class="text-gray-300 text-sm">/</span>
+                        <a href="#" class="text-sm">Air India</a>
+                    </div>
+                    <h4 class="font-semibold text-5xl">Air India</h4>
+                    <div class="flex items-center space-x-6 mt-2 text-gray-300">
+                        <a href="#overview">Overview</a><p>|</p>
+                        <a href="#method">How it Happened</a><p>|</p>
+                        <a href="#data-compromised">Data Compromised</a><p>|</p>
+                        <a href="#impact">Impact on the Company and Customers</a>
+                    </div>
                 </div>
-                <div class="mt-24 text-center space-y-4 max-w-3xl mx-auto md:px-2 px-4">
-                    <h3 class="text-6xl font-semibold">Companies in Asia</h3>
-                    <p class="text-lg text-gray-200">Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus.</p>
-                </div>
+                <a href="./assets/air-india.png" target="image-viewer"><img src="./assets/air-india.png" class="w-full h-96 mt-10 object-cover rounded-lg filter grayscale-0 hover:grayscale transition duration-300"></a>
 			</div>
 		</div>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 max-w-6xl mx-auto mt-24 gap-4 px-4">
-        <!-- COMPANY 1 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
-            <img src="./assets/asia-sony-pictures.png" class="w-full h-96 object-cover transition-opacity duration-300" />
-            <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
-            <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                <p class="text-white text-lg font-semibold">Sony Pictures (Japan / US Based)</p>
+		<div class="space-y-8 max-w-5xl mx-auto mt-40 pt-10">
+            
+            <div class="space-y-4 pt-11" id="overview">
+                <h4 class="text-3xl font-medium text-purple-300">Overview of the Breach</h4>
+                <p class="text-justify">In May 2021, Air India, the national carrier of India, disclosed that it had been the target of a sophisticated cyberattack that compromised the personal data of approximately 4.5 million of its passengers worldwide. The breach occurred after a cyberattack on SITA Passenger Service System (SITA PSS), a Swiss technology company that provides data processing services to Air India. The compromised data included a wide range of personal information collected from customers who registered between August 2011 and February 2021. While the attack was initially reported by SITA in February 2021, Air India was only able to identify the affected data subjects later, highlighting the complexity of the incident. This data breach raised significant concerns about the security of passenger data within the aviation industry.</p>
             </div>
-        </a>
 
-        <!-- COMPANY 2 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
-            <img src="./assets/asia-tata-consultancy-services.png" class="w-full h-96 object-cover transition-opacity duration-300" />
-            <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
-            <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                <p class="text-white text-lg font-semibold">Tata Consultancy Services India</p>
+            <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
+                <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
+                <h1 class="text=xl font-medium">Third-Party Vendor Vulnerabilities</h1>
+                <p class="pl-4 text-justify">- The Air India data breach originated from a cyberattack on the systems of SITA PSS, the third-party service provider responsible for managing Air India's passenger data. The attackers gained unauthorized access to SITA's servers, where Air India's customer information was stored. The exact vulnerability exploited by the attackers has not been publicly disclosed in detail, but the incident underscores the risks associated with entrusting sensitive data to third-party vendors and the importance of their security protocols.</p>
+                <h1 class="text=xl font-medium">Delayed Detection and Response</h1>
+                <p class="pl-4 text-justify">- The attackers reportedly had access to SITA's systems for a period of 22 days, between February and March 2021, allowing them ample time to exfiltrate the vast amount of passenger data. Air India received the initial notification of the breach from SITA in late February but did not receive the specifics of the affected individuals until late March and early April. This delay in identifying the scope of the breach complicated Air India's response and notification process to its customers.</p>
             </div>
-        </a>
 
-        <!-- COMPANY 3 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
-            <img src="./assets/asia-air-india.png" class="w-full h-96 object-cover transition-opacity duration-300" />
-            <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
-            <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                <p class="text-white text-lg font-semibold">Air India</p>
-            </div>
-        </a>
 
-        <!-- COMPANY 4 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
-            <img src="./assets/asia-bangladesh-bank.png" class="w-full h-96 object-cover transition-opacity duration-300" />
-            <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
-            <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                <p class="text-white text-lg font-semibold">Bangladesh Bank</p>
-            </div>
-        </a>
+            <div class="space-y-4" id="data-compromised">
+                <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
+                <h5 class="text-xl font-medium">Passenger Information</h5>
+                <p class="pl-4 text-justify">- The extensive data compromised in the Air India breach included a variety of personal details of approximately 4.5 million passengers. This included names, dates of birth, contact information, passport details, and ticket information. The exposure of this type of data can significantly increase the risk of identity theft and other fraudulent activities for the affected individuals.</p>
 
-        <!-- COMPANY 5 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
-            <img src="./assets/asia-shanghai-national-police.png" class="w-full h-96 object-cover transition-opacity duration-300" />
-            <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
-            <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                <p class="text-white text-lg font-semibold">Shanghai National Police</p>
+                <h5 class="text-xl font-medium">Payment and Frequent Flyer Information</h5>
+                <p class="pl-4 text-justify">- Notably, the compromised data also included credit card details, although Air India clarified that CVV/CVC numbers were not exposed in the incident. Additionally, the breach accessed Air India's frequent flyer data, potentially compromising the accounts of loyal customers. The wide range and sensitivity of the stolen information made this a significant data security incident with potential long-term consequences for the affected passengers.</p>
             </div>
-        </a>
-    </div>
+
+            <div class="space-y-4" id="impact">
+                <h4 class="text-3xl font-medium text-purple-300">Impact on the Company and Customers</h4>
+                <p class="text-justify">The Air India data breach led to significant concerns among its customer base regarding the security of their personal information, potentially eroding public trust in the airline's ability to protect sensitive data. Following the disclosure of the breach in May 2021, Air India took measures to secure its compromised servers, engaged external data security specialists to investigate the incident, and notified affected customers. The airline also urged passengers to reset their passwords for their frequent flyer program as a precautionary measure. While Air India stated that there was no evidence of misuse of the leaked data at the time of the announcement, the potential for future harm remained a concern for affected individuals. The incident also prompted a lawsuit against Air India by a passenger seeking damages for the data breach, highlighting the legal and financial repercussions that companies can face following such incidents. This breach served as a critical reminder for the aviation industry and other sectors about the necessity of robust cybersecurity measures and the potential impact of supply chain vulnerabilities through third-party service providers.</p>
+            </div>
+
+            <!-- REFERENCES -->
+            <div>
+                <details class="rounded border shadow" open>
+                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                    References
+                    </summary>
+                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                    <ul class="list-disc list-inside space-y-1">
+                        <li>ENS Economic Bureau. (2021, May 22). Air India flyers’ data leaked after cyberattack, 45 lakh affected. The Indian Express. https://indianexpress.com/article/india/ai-flyers-data-leaked-after-cyberattack-7325026/lite/</li>
+                        <li>Reuters. (2021, May 12). Heimkehr für Delivery Hero - Essenslieferdienst wieder in Deutschland aktiv. Reuters. https://www.reuters.com/article/us-air-india-cybersecurity-idUSKBN2CT0FV/</li>
+                    </ul>
+                    </div>
+                </details>
+            </div>
+        </div>
 		
+		
+
 		<footer class="text-white w-full p-4 md:mt-24 mt-10">
             <div class="max-w-6xl mx-auto border p-6 rounded md:flex block justify-between bg-indigo-950 border-indigo-900">
                 <div>
