--- a/companies-asia/bangladesh-bank.html
+++ b/companies-asia/bangladesh-bank.html
@@ -3,18 +3,18 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>Companies in Asia</title>
+		<title>Bangladesh Bank</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
 		<div class="min-h-screen bg-[#0b0f2a] bg-[radial-gradient(circle_at_top_right,_rgba(0,159,183,0.3)_0%,_transparent_60%),_radial-gradient(circle_at_bottom_left,_rgba(0,159,183,0.3)_0%,_transparent_60%)]">
-		<div id="hero" class="w-full relative">
+		<div id="hero" class="w-full h-[80dvh] relative">
             <nav class="">
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
                         <div class="flex items-center space-x-4">
-                            <img src="../assets/logo.svg" class="w-14 h-14 text-black">
+                            <img src="../../assets/logo.svg" class="w-14 h-14 text-black">
                             <h4 class="text-2xl">ThreatScope</h4>
                         </div>
                     </div>
@@ -285,68 +285,78 @@
                 </div>
             </nav>
 
-			<div class="mt-10 max-w-7xl mx-auto">
-                <div class="flex items-center text-gray-300 space-x-2">
-                    <a class="text-sm" href="#">Companies Affected</a>
-                    <span class="text-gray-300 text-sm">/</span>
-                    <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
-                    <span class="text-gray-300 text-sm">/</span>
-                    <a href="#" class="text-sm">Asia</a>
+			<div class="mt-24 max-w-5xl mx-auto">
+                <div class="space-y-4">
+                    <div class="flex items-center text-gray-300 space-x-2">
+                        <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
+                        <span class="text-gray-300 text-sm">/</span>
+                        <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <span class="text-gray-300 text-sm">/</span>
+                        <a href="../continents/asia.html" class="text-sm">Asia</a>
+                        <span class="text-gray-300 text-sm">/</span>
+                        <a href="#" class="text-sm">Bangladesh Bank</a>
+                    </div>
+                    <h4 class="font-semibold text-5xl">Bangladesh Bank</h4>
+                    <div class="flex items-center space-x-6 mt-2 text-gray-300">
+                        <a href="#overview">Overview</a><p>|</p>
+                        <a href="#method">How it Happened</a><p>|</p>
+                        <a href="#data-compromised">Data Compromised</a><p>|</p>
+                        <a href="#impact">Impact on the Company and Customers</a>
+                    </div>
                 </div>
-                <div class="mt-24 text-center space-y-4 max-w-3xl mx-auto md:px-2 px-4">
-                    <h3 class="text-6xl font-semibold">Companies in Asia</h3>
-                    <p class="text-lg text-gray-200">Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus.</p>
-                </div>
+                <a href="./assets/bangladesh-bank.png" target="image-viewer"><img src="./assets/bangladesh-bank.png" class="w-full h-96 mt-10 object-cover rounded-lg filter grayscale-0 hover:grayscale transition duration-300"></a>
 			</div>
 		</div>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 max-w-6xl mx-auto mt-24 gap-4 px-4">
-        <!-- COMPANY 1 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
-            <img src="./assets/asia-sony-pictures.png" class="w-full h-96 object-cover transition-opacity duration-300" />
-            <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
-            <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                <p class="text-white text-lg font-semibold">Sony Pictures (Japan / US Based)</p>
+		<div class="space-y-8 max-w-5xl mx-auto mt-40 pt-10">
+            
+            <div class="space-y-4 pt-11" id="overview">
+                <h4 class="text-3xl font-medium text-purple-300">Overview of the Breach</h4>
+                <p class="text-justify">In February 2016, Bangladesh Bank, the central bank of Bangladesh, was the victim of a sophisticated cyber heist that resulted in the theft of $81 million from its account held at the Federal Reserve Bank of New York. Unidentified hackers managed to issue 35 fraudulent instructions via the SWIFT network to illegally transfer nearly $1 billion. While most of these transactions were flagged and blocked, five were successful, with $81 million routed to accounts in the Philippines and $20 million to Sri Lanka (which was later recovered). This unprecedented cyberattack highlighted significant vulnerabilities in the bank's cybersecurity infrastructure and the security of the SWIFT messaging system. The incident remains one of the largest bank robberies in history, with most of the stolen funds still unrecovered.</p>
             </div>
-        </a>
 
-        <!-- COMPANY 2 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
-            <img src="./assets/asia-tata-consultancy-services.png" class="w-full h-96 object-cover transition-opacity duration-300" />
-            <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
-            <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                <p class="text-white text-lg font-semibold">Tata Consultancy Services India</p>
+            <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
+                <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
+                <h1 class="text=xl font-medium">Exploiting Prolonged Network Access</h1>
+                <p class="pl-4 text-justify">- The attackers are believed to have infiltrated Bangladesh Bank's computer network approximately a year before the actual theft. They likely used malware, potentially delivered through phishing emails to bank employees, to gain access and observe the bank's internal processes for payment transfers. This prolonged access allowed them to understand the SWIFT system's operations and obtain the necessary credentials for initiating fraudulent transactions.</p>
+                <h1 class="text=xl font-medium">Timing, Tactics, and the Flaws in SWIFT Security</h1>
+                <p class="pl-4 text-justify">- On a weekend in February 2016, when Bangladesh Bank's offices were closed, the hackers initiated 35 fraudulent payment requests through the SWIFT network, attempting to transfer close to $1 billion from the bank's account at the New York Fed to various accounts overseas. The timing of the attack during the bank's closure suggests a calculated effort to delay detection. While the majority of these requests were flagged by the banking system, five succeeded due to a combination of factors, including typos in some of the fraudulent instructions that bypassed certain security checks.</p>
             </div>
-        </a>
 
-        <!-- COMPANY 3 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
-            <img src="./assets/asia-air-india.png" class="w-full h-96 object-cover transition-opacity duration-300" />
-            <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
-            <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                <p class="text-white text-lg font-semibold">Air India</p>
-            </div>
-        </a>
 
-        <!-- COMPANY 4 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
-            <img src="./assets/asia-bangladesh-bank.png" class="w-full h-96 object-cover transition-opacity duration-300" />
-            <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
-            <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                <p class="text-white text-lg font-semibold">Bangladesh Bank</p>
-            </div>
-        </a>
+            <div class="space-y-4" id="data-compromised">
+                <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
+                <h5 class="text-xl font-medium">Credentials and Access Protocols</h5>
+                <p class="pl-4 text-justify">- The primary data compromised in this cyber heist were the credentials and access protocols for Bangladesh Bank's SWIFT system. By gaining control over these, the attackers were able to issue fraudulent payment instructions that appeared legitimate to the SWIFT network and the Federal Reserve Bank of New York. This unauthorized access to the bank's financial communication system was the key to executing the theft.</p>
 
-        <!-- COMPANY 5 -->
-        <a href="#" class="relative w-full rounded-lg overflow-hidden shadow-lg group">
-            <img src="./assets/asia-shanghai-national-police.png" class="w-full h-96 object-cover transition-opacity duration-300" />
-            <div class="absolute inset-0 bg-gray-900 opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
-            <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
-                <p class="text-white text-lg font-semibold">Shanghai National Police</p>
+                <h5 class="text-xl font-medium">Internal Bank Communications and Operational Details</h5>
+                <p class="pl-4 text-justify">- Additionally, the attackers likely gained access to internal bank communications and operational details during their prolonged presence within Bangladesh Bank's network. This reconnaissance would have provided them with the information needed to craft the fraudulent transfer requests and understand the bank's security procedures, allowing them to bypass some of the initial detection mechanisms.</p>
             </div>
-        </a>
-    </div>
+
+            <div class="space-y-4" id="impact">
+                <h4 class="text-3xl font-medium text-purple-300">Impact on the Company and Customers</h4>
+                <p class="text-justify">The Bangladesh Bank cyber heist resulted in a significant financial loss of $81 million, most of which remains unrecovered, severely impacting the bank's financial standing. The incident also caused considerable reputational damage to Bangladesh Bank and raised serious questions about the security of the SWIFT system, a critical infrastructure for global financial transactions. The lack of a clear identification of the perpetrators and the difficulty in recovering the stolen funds led to prolonged investigations and diplomatic efforts. The heist prompted increased scrutiny of cybersecurity measures within the global banking sector and led to calls for enhanced security protocols and information sharing. While the direct impact on individual customers of Bangladesh Bank was not the theft of personal financial data, the breach shook confidence in the security of financial institutions and their ability to safeguard assets held within their systems. The incident also spurred regulatory changes and a greater emphasis on cybersecurity within the financial industry to prevent similar attacks in the future.</p>
+            </div>
+
+            <!-- REFERENCES -->
+            <div>
+                <details class="rounded border shadow" open>
+                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                    References
+                    </summary>
+                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                    <ul class="list-disc list-inside space-y-1">
+                        <li>Cardwell-Brown, A. (2023, March 16). The billion dollar heist: the inside story of the Bangladesh Bank cyberattack. https://www.linkedin.com/pulse/billion-dollar-heist-inside-story-bangladesh-bank-cardwell-brown</li>
+                        <li>Gonzalez, S. (2019, July 11). Malware: Bangladesh Bank Heist - ERMProtect Cybersecurity. ERMProtect Cybersecurity - Cybersecurity | Digital Forensics | Penetration Testing. https://ermprotect.com/blog/malware-bangladesh-bank-heist/</li>
+                        <li>Reports, S. (2016, July 21). How the New York Fed fumbled over the Bangladesh Bank cyber-heist. Reuters. https://www.reuters.com/investigates/special-report/cyber-heist-federal/</li>
+                    </ul>
+                    </div>
+                </details>
+            </div>
+        </div>
 		
+		
+
 		<footer class="text-white w-full p-4 md:mt-24 mt-10">
             <div class="max-w-6xl mx-auto border p-6 rounded md:flex block justify-between bg-indigo-950 border-indigo-900">
                 <div>
