updated recent cyber attacks
added bg photos and profile pics and i also added a folder for profile pictures

--- a/recent-cyber-attacks/boeing-ransomware.html
+++ b/recent-cyber-attacks/boeing-ransomware.html
@@ -302,7 +302,7 @@
         
         <div class="space-y-4">
             <div class="flex items-center text-white p-4 rounded-lg w-fit">
-                <img src="/assets/africa.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
+                <img src="../assets/profile-picture/moyaa.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 <div>
                     <p class="font-semibold text-base">Patrick Christopher Moya</p>
                     <p class="text-sm text-gray-300">April 02, 2025</p>
