--- a/recent-cyber-attacks/change-healthcare.html
+++ b/recent-cyber-attacks/change-healthcare.html
@@ -9,9 +9,8 @@
 	</head>
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
-		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/picture-recent-cyber-attacks/change-healthcare.jpeg')] bg-cover bg-center bg-no-repeat relative"
-             style="position: relative;">
-            <div style="position: absolute; inset: 0; background-color: rgba(0, 0, 0, 0.2); pointer-events: none ;"></div>
+		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/picture-recent-cyber-attacks/change-healthcare.jpeg')] bg-cover bg-center bg-no-repeat relative" style="position: relative;">
+            <div style="position: absolute; inset: 0; background-color: rgba(0, 0, 0, 0.4); pointer-events: none ;"></div>
             <div style="position: absolute; inset: 0; box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.5); pointer-events: none;"></div>
             <nav class="absolute inset-0 z-10">
                 <div class="w-full p-4 flex items-center justify-between">
@@ -302,7 +301,7 @@
         
         <div class="space-y-4">
             <div class="flex items-center text-white p-4 rounded-lg w-fit">
-                <img src="/assets/africa.jpg" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
+                <img src="../assets/profile-picture/laugo.png" alt="Author" class="w-12 h-12 rounded-full object-cover mr-4">
                 <div>
                     <p class="font-semibold text-base">Cyril Marius Laugo</p>
                     <p class="text-sm text-gray-300">April 01, 2025</p>
