update: fixed grid and responsiveness of the pages

--- a/continents/north-america.html
+++ b/continents/north-america.html
@@ -295,12 +295,15 @@
                 </div>
                 <div class="mt-24 text-center space-y-4 max-w-3xl mx-auto md:px-2 px-4">
                     <h3 class="text-6xl font-semibold">Companies in North America</h3>
-                    <p class="text-lg text-gray-200">Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus.</p>
+                    <p class="text-lg text-gray-200">Welcome to our look at significant cyberattacks on companies across North America, a region heavily impacted by sophisticated digital threats. These cases highlight the critical importance of cybersecurity in protecting data, infrastructure, and public trust.
+</p>
                 </div>
 			</div>
 		</div>
-		
-        <div class="grid grid-cols-3 max-w-6xl mx-auto mt-24 gap-4">
+	
+        
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 max-w-6xl mx-auto mt-24 gap-4 px-4">
+            <!-- COMPANY 1 -->
             <a href="/companies-north-america/yahoo.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/pictiure-north-america/yahoo(1).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -309,6 +312,7 @@
                 </div>
             </a>
 
+            <!-- COMPANY 2 -->
             <a href="/companies-north-america/colonial-pipeline.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/pictiure-north-america/colonial-pipeline(1).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -317,6 +321,7 @@
                 </div>
             </a>
 
+            <!-- COMPANY 3 -->
             <a href="../companies-north-america/equifax.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/pictiure-north-america/Equifax(1).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -325,6 +330,7 @@
                 </div>
             </a>
 
+            <!-- COMPANY 4 -->
             <a href="/companies-north-america/marriot-international.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/pictiure-north-america/marriot(1).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -333,6 +339,7 @@
                 </div>
             </a>
 
+            <!-- COMPANY 5 -->
             <a href="/companies-north-america/target-corporation.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/pictiure-north-america/Target (2).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -340,11 +347,7 @@
                     <p class="text-white text-lg font-semibold">Target Corporation</p>
                 </div>
             </a>
-
-
-            
-        </div>
-		
+        </div>	
 
 		<footer class="text-white w-full p-4 md:mt-24 mt-10">
             <div class="max-w-6xl mx-auto border p-6 rounded md:flex block justify-between bg-indigo-950 border-indigo-900">
