--- a/continents/south-america.html
+++ b/continents/south-america.html
@@ -295,12 +295,14 @@
                 </div>
                 <div class="mt-24 text-center space-y-4 max-w-3xl mx-auto md:px-2 px-4">
                     <h3 class="text-6xl font-semibold">Companies in South America</h3>
-                    <p class="text-lg text-gray-200">Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus.</p>
+                    <p class="text-lg text-gray-200">Welcome to our overview of major cyberattacks on companies across South America, where digital threats have increasingly targeted key industries. These incidents underscore the region’s urgent need for robust cybersecurity strategies and greater awareness.
+</p>
                 </div>
 			</div>
 		</div>
-		
-        <div class="grid grid-cols-3 max-w-6xl mx-auto mt-24 gap-4">
+
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 max-w-6xl mx-auto mt-24 gap-4 px-4">
+            <!-- COMPANY 1 -->
             <a href="/companies-south-america/banco-de-chile.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-south-america/Banco-de-chile.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -309,6 +311,7 @@
                 </div>
             </a>
 
+            <!-- COMPANY 2 -->
             <a href="/companies-south-america/consejo-nacional-electoral.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-south-america/concejo-nacional-electoral.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -317,6 +320,7 @@
                 </div>
             </a>
 
+            <!-- COMPANY 3 -->
             <a href="/companies-south-america/embratel.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-south-america/embratel(2).jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -325,6 +329,7 @@
                 </div>
             </a>
 
+            <!-- COMPANY 4 -->
             <a href="/companies-south-america/ministerio-de-salud-publica.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-south-america/Ministerio.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -333,6 +338,7 @@
                 </div>
             </a>
 
+            <!-- COMPANY 5 -->
             <a href="/companies-south-america/telecom-argentina.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-south-america/telecom.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -340,10 +346,7 @@
                     <p class="text-white text-lg font-semibold">Telecom Argentina</p>
                 </div>
             </a>
-
-
-            
-        </div>
+        </div>	
 		
 
 		<footer class="text-white w-full p-4 md:mt-24 mt-10">
