finished recent-cyber-attack
tapos na ya pramis

--- a/recent-cyber-attacks/boeing-ransomware.html
+++ b/recent-cyber-attacks/boeing-ransomware.html
@@ -11,7 +11,7 @@
 		<!-- NAVIGATION -->
 		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/picture-recent-cyber-attacks/boeing.jpg')] bg-cover bg-center bg-no-repeat relative"
              style="position: relative;">
-            <div style="position: absolute; inset: 0; background-color: rgba(0, 0, 0, 0.8); pointer-events: none;"></div>
+            <div style="position: absolute; inset: 0; background-color: rgba(0, 0, 0, 0); pointer-events: none;"></div>
             <div style="position: absolute; inset: 0; box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.5); pointer-events: none;"></div>
             <nav class="absolute inset-0 z-10">
                 <div class="w-full p-4 flex items-center justify-between">
@@ -354,7 +354,7 @@
           <div class="grid grid-cols-3 gap-4">
             
             <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
-                <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/icbc-attack.jpg" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
                     <h5 class=" font-medium text-2xl">ICBC Financial Services Ransomware Attack</h5>
                     <p class="my-2">Get ready for a financial thriller with global implications! ICBC, a banking behemoth, found itself caught in a digital double whammy. First, a LockBit ransomware attack threw a wrench in US Treasury trades, causing ripples in the massive financial markets. Then, just when things seemed to settle, a data breach hit their London branch! This isn't just about one bank's troubles; it's a nail-biting illustration of how interconnected our financial world is and the potential for cyberattacks to send shockwaves across continents.</p>
@@ -365,7 +365,7 @@
             </div>
 
             <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
-                <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/schneider-attack.jpg" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
                     <h5 class=" font-medium text-2xl">Schneider Electric Ransomware Attack</h5>
                     <p class="my-2">Let's journey into the intricate world of industrial giants and the cyber threats they face. Schneider Electric, a powerhouse in automation and digital transformation, found itself in a digital tug-of-war with the Hellcat ransomware group. Picture a locked digital vault containing project secrets and user data, with a hefty ransom demand echoing in the digital corridors. While the core operations remained seemingly untouched, the potential exposure of sensitive information adds a layer of suspense to this industrial cyber drama. It's a stark reminder that even the most robust enterprises are not immune to the persistent claws of ransomware.</p>
@@ -376,7 +376,7 @@
             </div>
 
             <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
-                <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/kawasaki-attack.jpg" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
                     <h5 class=" font-medium text-2xl">Kawasaki Motors Europe Ransomware Attack</h5>
                     <p class="my-2">A stealthy digital heist targeting the roaring world of Kawasaki motorcycles! RansomHub, a shadowy group of cyber extortionists, allegedly snatched a treasure trove of data from Kawasaki Motors Europe. What makes this tale extra intriguing is the initial hush-hush, with Kawasaki seemingly downplaying the digital drama. But like any good thriller, a plot twist emerged when the stolen secrets were reportedly leaked online after the ransom remained unpaid. It's a fascinating peek behind the corporate curtain, revealing that even when the engine's running smoothly, digital dangers can still lurk in the shadows.</p>
