--- a/recent-cyber-attacks/crowdstrike-incident.html
+++ b/recent-cyber-attacks/crowdstrike-incident.html
@@ -10,7 +10,7 @@
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
 		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/picture-recent-cyber-attacks/crowdstrike-incident.jpg')] bg-cover bg-center bg-no-repeat relative" style="position: relative;">
-            <div style="position: absolute; inset: 0; background-color: rgba(0, 0, 0, 0.5); pointer-events: none ;"></div>
+            <div style="position: absolute; inset: 0; background-color: rgba(0, 0, 0, 0); pointer-events: none ;"></div>
             <div style="position: absolute; inset: 0; box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.5); pointer-events: none;"></div>
             <nav class="absolute inset-0 z-10">
                 <div class="w-full p-4 flex items-center justify-between">
@@ -354,7 +354,7 @@
           <div class="grid grid-cols-3 gap-4">
             
             <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
-                <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/change-healthcare.jpeg" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
                     <h5 class=" font-medium text-2xl">Change Healthcare Ransomware Attack </h5>
                     <p class="my-2"> The ransomware attack caused a "widespread outage, crippling essential functions such as insurance eligibility verification, claims processing, and prescription fulfillment." This directly led to a major IT outage across the healthcare system.</p>
@@ -365,7 +365,7 @@
             </div>
 
             <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
-                <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/icbc-attack.jpg" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
                     <h5 class=" font-medium text-2xl">ICBC Financial Services Ransomware Attack</h5>
                     <p class="my-2">This attack "led to a halt in U.S. Treasury trades and causing considerable payment delays," indicating a significant disruption of their IT systems and operations.</p>
@@ -376,7 +376,7 @@
             </div>
 
             <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
-                <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/mgm-attack.jpg" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
                     <h5 class=" font-medium text-2xl">MGM Resorts Phishing Attack</h5>
                     <p class="my-2">The attack "brought operations across their prominent Las Vegas properties to a near standstill for almost a week," affecting various IT-dependent services like slot machines, hotel bookings, and point-of-sale systems. This was a major IT outage impacting their business.</p>
