--- a/recent-cyber-attacks/truepill-data-breach.html
+++ b/recent-cyber-attacks/truepill-data-breach.html
@@ -10,7 +10,7 @@
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
 		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/picture-recent-cyber-attacks/truepill-attack.jpg')] bg-cover bg-center bg-no-repeat relative" style="position: relative;">
-            <div style="position: absolute; inset: 0; background-color: rgba(0, 0, 0, 0.2); pointer-events: none ;"></div>
+            <div style="position: absolute; inset: 0; background-color: rgba(0, 0, 0, 0); pointer-events: none ;"></div>
             <div style="position: absolute; inset: 0; box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.5); pointer-events: none;"></div>
             <nav class="absolute inset-0 z-10">
                 <div class="w-full p-4 flex items-center justify-between">
@@ -345,7 +345,7 @@
           <div class="grid grid-cols-3 gap-4">
             
             <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
-                <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/loandepot-attack.jpg" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
                     <h5 class=" font-medium text-2xl">LoanDepot Ransomware Attack</h5>
                     <p class="my-2">In early January 2024, LoanDepot, a prominent mortgage lending company, became the target of a significant ransomware attack. The ALPHV/BlackCat ransomware group claimed responsibility for the intrusion, successfully breaching LoanDepot's systems. This cyberattack led to the exfiltration of sensitive personal information belonging to a staggering 16.6 million of their customers. The compromised data included a range of highly confidential details, such as names, Social Security numbers, dates of birth, and financial account numbers, placing a vast number of individuals at considerable risk of identity theft and financial fraud.</p>
@@ -356,7 +356,7 @@
             </div>
 
             <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
-                <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/mgm-attack.jpg" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
                     <h5 class=" font-medium text-2xl">MGM Resorts Phishing Attack</h5>
                     <p class="my-2">Welcome to the dazzling world of Las Vegas, where the stakes are always high, even in the digital realm! MGM Resorts, a titan of the Strip, found its glittering operations plunged into chaos by a cunning cyberattack, reportedly orchestrated by the Scattered Spider gang. Imagine slot machines going silent and reservation systems grinding to a halt – a digital blackout in the city that never sleeps! The subsequent legal fallout over compromised data adds another layer to this Sin City cyber saga, highlighting the very real consequences of digital vulnerabilities in the entertainment industry.</p>
@@ -367,7 +367,7 @@
             </div>
 
             <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:scale-105 transform transition-all duration-300 hover:scale-105">
-                <img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded p-4" alt="">
+                <img src="../assets/picture-recent-cyber-attacks/kawasaki-attack.jpg" class="w-full h-80 object-cover rounded p-4" alt="">
                 <div class="p-4">
                     <h5 class=" font-medium text-2xl">Kawasaki Motors Europe Cyber Attack</h5>
                     <p class="my-2">A stealthy digital heist targeting the roaring world of Kawasaki motorcycles! RansomHub, a shadowy group of cyber extortionists, allegedly snatched a treasure trove of data from Kawasaki Motors Europe. What makes this tale extra intriguing is the initial hush-hush, with Kawasaki seemingly downplaying the digital drama. But like any good thriller, a plot twist emerged when the stolen secrets were reportedly leaked online after the ransom remained unpaid. It's a fascinating peek behind the corporate curtain, revealing that even when the engine's running smoothly, digital dangers can still lurk in the shadows.</p>
