added content: all subtopics under companies-europe with contents

--- a/companies-europe/british-airway.html
+++ b/companies-europe/british-airway.html
@@ -294,16 +294,16 @@
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">Europe</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">British Airway</a>
+                        <a href="#" class="text-sm">British Airways</a>
                     </div>
-                    <h4 class="font-semibold text-5xl">British Airway</h4>
+                    <h4 class="font-semibold text-5xl">British Airways</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
                         <a href="#overview">Overview</a>
                         <a href="#method">How it Happened</a>
                         <a href="#data-compromised">Data Compromised</a>
                     </div>
                 </div>
-                <img src="https://placehold.co/500x500" class="w-full h-96 mt-10 object-cover rounded-lg ">
+                <img src="../assets/british.jpg" class="w-full h-96 mt-10 object-cover rounded-lg ">
                 
 			</div>
 		</div>
