--- a/protective-measure/physical-protective-measure.html
+++ b/protective-measure/physical-protective-measure.html
@@ -305,7 +305,7 @@
 			<div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-y-8 max-w-6xl mx-auto py-16 gap-4">
 
 				<div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/camera.png" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Surveillance Camera</h5>
 						<p class="my-2">Surveillance cameras are physical security tools used to monitor areas and record activities. They act as both a deterrent to criminals and a way to gather evidence after incidents. These devices are commonly found in public spaces, offices, and data centers to enhance security.</p>
@@ -317,7 +317,7 @@
 				</div>
 
                 <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/security.png" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Security Guard</h5>
 						<p class="my-2">Security guards are personnel hired to protect physical spaces from unauthorized access or suspicious activity. They perform patrols, check IDs, and respond quickly to security breaches. Their presence increases the sense of safety and often helps prevent crime.</p>
@@ -329,7 +329,7 @@
 				</div>
 
                 <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/locked-room.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Locked Server Rooms</h5>
 						<p class="my-2">Locked server rooms restrict physical access to important IT infrastructure. Only authorized personnel with keys or access cards can enter. This helps protect sensitive equipment and data from theft, damage, or tampering.</p>
@@ -341,7 +341,7 @@
 				</div>
 
                 <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/bio.jpeg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Biometric Access Control</h5>
 						<p class="my-2">Biometric access control uses unique physical traits such as fingerprints, facial recognition, or iris scans to authenticate and allow entry to restricted areas. It offers a higher level of security than traditional keys or cards, as biometric traits are difficult to forge or steal. This method ensures that only verified individuals can access sensitive equipment or data rooms.
@@ -354,7 +354,7 @@
 				</div>
 
                 <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/suppresion.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Fire Suppression Systems</h5>
 						<p class="my-2">Fire suppression systems are automated safety mechanisms designed to detect and extinguish fires, protecting critical hardware and infrastructure. Unlike traditional sprinklers, these systems often use gas-based agents to avoid damaging electronic equipment. They are essential for reducing damage and downtime during fire emergencies in server rooms and data centers.</p>
@@ -366,7 +366,7 @@
 				</div>
 
                 <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="https://placehold.co/500x500" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/detector.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Motion Detectors</h5>
 						<p class="my-2">Motion detectors sense movement in secured areas and can trigger alarms or alert security personnel. They are especially useful during off-hours or in locations where constant surveillance isn’t feasible. As part of a layered defense, they help detect unauthorized presence early and prompt immediate response.</p>
