added content: all subtopics under the protective-measure with contents

--- a/protective-measure/physical-protective-measure.html
+++ b/protective-measure/physical-protective-measure.html
@@ -329,7 +329,7 @@
 				</div>
 
                 <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="../assets/locked-room.jpg" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/server.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Locked Server Rooms</h5>
 						<p class="my-2">Locked server rooms restrict physical access to important IT infrastructure. Only authorized personnel with keys or access cards can enter. This helps protect sensitive equipment and data from theft, damage, or tampering.</p>
