update; done with the picture make it clear and to the about us add some quotes and landing sites

--- a/companies-africa/City Power.html
+++ b/companies-africa/City Power.html
@@ -14,7 +14,7 @@
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
                         <div class="flex items-center space-x-4">
-                            <img src="../../assets/logo.svg" class="w-14 h-14 text-black">
+                            <img src="../assets/logo.svg" class="w-14 h-14 text-black">
                             <h4 class="text-2xl">ThreatScope</h4>
                         </div>
                     </div>
@@ -303,7 +303,7 @@
                         <a href="#data-compromised">Data Compromised</a>
                     </div>
                 </div>
-                <img src="../assets/city.jpg" class="w-full h-96 mt-10 object-cover rounded-lg ">
+                <img src="../assets/picture-africa/city1.png" class="w-full h-96 mt-10 object-cover rounded-lg ">
                 
 			</div>
 		</div>
