update the finacial,legal,recovery and add some link in about us

--- a/about-us.html
+++ b/about-us.html
@@ -20,10 +20,10 @@
                     </div>
                     <ul class="md:flex items-center space-x-4">
                         <li>
-                            <a href="#" class="hidden md:block">Home</a>
+                            <a href="index.html" class="hidden md:block">Home</a>
                         </li>
                         <li>
-                            <a href="#" class="hidden md:block">Recent News</a>
+                            <a href="recent-attacks.html" class="hidden md:block">Recent News</a>
                         </li>
                         <li>
                             <a href="#" class="hidden md:block">Learn Now</a>
